--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -292,6 +292,25 @@
           <string>Schulv.</string>
          </property>
         </widget>
+        <widget class="QLabel" name="label_Schulv_2">
+         <property name="geometry">
+          <rect>
+           <x>400</x>
+           <y>10</y>
+           <width>67</width>
+           <height>13</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Quarantäne</string>
+         </property>
+        </widget>
        </widget>
        <widget class="QWidget" name="verticalLayoutWidget">
         <property name="geometry">
