--- a/susverwgui.ui
+++ b/susverwgui.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>Susverwgui</class>
+ <widget class="QWidget" name="Susverwgui">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -25,11 +25,21 @@
      <height>481</height>
     </rect>
    </property>
-   <column>
-    <property name="text">
-     <string>Nr.</string>
-    </property>
-   </column>
+   <property name="rowCount">
+    <number>0</number>
+   </property>
+   <attribute name="horizontalHeaderMinimumSectionSize">
+    <number>40</number>
+   </attribute>
+   <attribute name="horizontalHeaderDefaultSectionSize">
+    <number>40</number>
+   </attribute>
+   <attribute name="horizontalHeaderStretchLastSection">
+    <bool>true</bool>
+   </attribute>
+   <attribute name="verticalHeaderDefaultSectionSize">
+    <number>23</number>
+   </attribute>
    <column>
     <property name="text">
      <string>Name</string>
@@ -50,11 +60,18 @@
      <height>481</height>
     </rect>
    </property>
-   <column>
-    <property name="text">
-     <string>Nr.</string>
-    </property>
-   </column>
+   <attribute name="horizontalHeaderMinimumSectionSize">
+    <number>40</number>
+   </attribute>
+   <attribute name="horizontalHeaderDefaultSectionSize">
+    <number>40</number>
+   </attribute>
+   <attribute name="horizontalHeaderStretchLastSection">
+    <bool>true</bool>
+   </attribute>
+   <attribute name="verticalHeaderDefaultSectionSize">
+    <number>23</number>
+   </attribute>
    <column>
     <property name="text">
      <string>Name</string>
