--- a/susverwgui.ui
+++ b/susverwgui.ui
@@ -296,6 +296,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="editable">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
