--- a/susverwgui.ui
+++ b/susverwgui.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>Susverwgui</class>
  <widget class="QWidget" name="Susverwgui">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
