--- a/NeueStunde.ui
+++ b/NeueStunde.ui
@@ -119,6 +119,9 @@
       <property name="text">
        <string>OK</string>
       </property>
+      <property name="default">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
     <item row="0" column="1">
