--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -236,7 +236,7 @@ selection-color: rgb(255, 255, 255);</string>
            </font>
           </property>
           <property name="autoFormatting">
-           <set>QTextEdit::AutoAll</set>
+           <set>QTextEdit::AutoNone</set>
           </property>
           <property name="textInteractionFlags">
            <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextEditable|Qt::TextEditorInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
