--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -238,6 +238,9 @@ selection-color: rgb(255, 255, 255);</string>
           <property name="autoFormatting">
            <set>QTextEdit::AutoNone</set>
           </property>
+          <property name="acceptRichText">
+           <bool>false</bool>
+          </property>
           <property name="textInteractionFlags">
            <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextEditable|Qt::TextEditorInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
           </property>
