--- a/NeueStunde.ui
+++ b/NeueStunde.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>371</width>
-    <height>460</height>
+    <height>496</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -49,74 +49,91 @@
      <x>10</x>
      <y>290</y>
      <width>351</width>
-     <height>55</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="title">
     <string>Stunde</string>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <widget class="QRadioButton" name="radioButton">
-      <property name="text">
-       <string>1</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QRadioButton" name="radioButton_2">
-      <property name="text">
-       <string>2</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QRadioButton" name="radioButton_3">
-      <property name="text">
-       <string>3</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QRadioButton" name="radioButton_4">
-      <property name="text">
-       <string>4</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QRadioButton" name="radioButton_5">
-      <property name="text">
-       <string>5</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QRadioButton" name="radioButton_6">
-      <property name="text">
-       <string>6</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QRadioButton" name="radioButton_7">
-      <property name="text">
-       <string>7</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>30</y>
+      <width>321</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="0" column="0">
+      <widget class="QRadioButton" name="radioButton">
+       <property name="text">
+        <string>1</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QRadioButton" name="radioButton_2">
+       <property name="text">
+        <string>2</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QRadioButton" name="radioButton_3">
+       <property name="text">
+        <string>3</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QRadioButton" name="radioButton_4">
+       <property name="text">
+        <string>4</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="4">
+      <widget class="QRadioButton" name="radioButton_5">
+       <property name="text">
+        <string>5</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="5">
+      <widget class="QRadioButton" name="radioButton_6">
+       <property name="text">
+        <string>6</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="6">
+      <widget class="QRadioButton" name="radioButton_7">
+       <property name="text">
+        <string>7</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>420</y>
+     <y>460</y>
      <width>211</width>
      <height>25</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="1">
+     <widget class="QPushButton" name="pushButton_2">
+      <property name="text">
+       <string>Abbrechen</string>
+      </property>
+     </widget>
+    </item>
     <item row="0" column="0">
      <widget class="QPushButton" name="pushButton">
       <property name="text">
@@ -124,13 +141,6 @@
       </property>
       <property name="default">
        <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QPushButton" name="pushButton_2">
-      <property name="text">
-       <string>Abbrechen</string>
       </property>
      </widget>
     </item>
@@ -162,7 +172,7 @@
     <string notr="true">background-color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>Neue Stunde anlegen</string>
+    <string>Neue Stunde oder Serie anlegen</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -175,9 +185,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>350</y>
+     <y>360</y>
      <width>351</width>
-     <height>61</height>
+     <height>89</height>
     </rect>
    </property>
    <property name="title">
@@ -186,10 +196,10 @@
    <widget class="QComboBox" name="comboBoxSerie">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>216</x>
       <y>30</y>
-      <width>171</width>
-      <height>22</height>
+      <width>124</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="inputMethodHints">
@@ -202,17 +212,56 @@
      <string>keine Wiederholung</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>9</x>
-      <y>31</y>
-      <width>161</width>
-      <height>20</height>
+      <x>72</x>
+      <y>34</y>
+      <width>139</width>
+      <height>13</height>
      </rect>
     </property>
     <property name="text">
-     <string>Wöchentlich wiederholen bis zum </string>
+     <string>. Woche wiederholen bis zum</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>11</x>
+      <y>34</y>
+      <width>23</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Jede</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox">
+    <property name="geometry">
+     <rect>
+      <x>37</x>
+      <y>30</y>
+      <width>33</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkBox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>60</y>
+      <width>156</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>als Kompensation markieren</string>
     </property>
    </widget>
   </widget>
