--- a/NeueStunde.ui
+++ b/NeueStunde.ui
@@ -206,7 +206,7 @@
      <set>Qt::ImhNone</set>
     </property>
     <property name="editable">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="placeholderText">
      <string>keine Wiederholung</string>
