--- a/Tutmodgui.ui
+++ b/Tutmodgui.ui
@@ -9,12 +9,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>937</width>
+    <width>941</width>
     <height>570</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Mitgliederverwaltung</string>
+   <string>Tutorenmodus</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -192,10 +192,10 @@
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
-     <x>420</x>
+     <x>310</x>
      <y>53</y>
-     <width>81</width>
-     <height>13</height>
+     <width>321</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="font">
@@ -207,14 +207,17 @@
    <property name="text">
     <string>Datum wählen</string>
    </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
   </widget>
   <widget class="QLabel" name="label_11">
    <property name="geometry">
     <rect>
-     <x>730</x>
+     <x>647</x>
      <y>53</y>
-     <width>118</width>
-     <height>13</height>
+     <width>281</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="font">
@@ -225,6 +228,9 @@
    </property>
    <property name="text">
     <string>Fehlstundensummen</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="Line" name="line_3">
@@ -244,9 +250,9 @@
    <property name="geometry">
     <rect>
      <x>650</x>
-     <y>120</y>
+     <y>80</y>
      <width>281</width>
-     <height>151</height>
+     <height>231</height>
     </rect>
    </property>
    <property name="title">
@@ -255,8 +261,8 @@
    <widget class="QDateEdit" name="dateEdit_2">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>30</y>
+      <x>183</x>
+      <y>32</y>
       <width>81</width>
       <height>22</height>
      </rect>
@@ -265,8 +271,8 @@
    <widget class="QLabel" name="label_13">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>30</y>
+      <x>144</x>
+      <y>37</y>
       <width>35</width>
       <height>13</height>
      </rect>
@@ -278,9 +284,9 @@
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>30</y>
-      <width>47</width>
+      <x>20</x>
+      <y>37</y>
+      <width>20</width>
       <height>13</height>
      </rect>
     </property>
@@ -291,8 +297,8 @@
    <widget class="QDateEdit" name="dateEdit">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>30</y>
+      <x>50</x>
+      <y>32</y>
       <width>81</width>
       <height>22</height>
      </rect>
@@ -302,19 +308,22 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>80</y>
-      <width>68</width>
+      <y>100</y>
+      <width>80</width>
       <height>13</height>
      </rect>
     </property>
     <property name="text">
      <string>entschuldigte:</string>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
    </widget>
    <widget class="QLabel" name="label_15">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>120</y>
       <width>80</width>
       <height>13</height>
@@ -323,12 +332,15 @@
     <property name="text">
      <string>unentschuldigte:</string>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
    </widget>
    <widget class="Line" name="line_4">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>100</y>
+      <y>130</y>
       <width>241</width>
       <height>16</height>
      </rect>
@@ -341,9 +353,9 @@
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>80</y>
-      <width>3</width>
-      <height>61</height>
+      <y>90</y>
+      <width>20</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="orientation">
@@ -353,8 +365,8 @@
    <widget class="QLabel" name="label_16">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>80</y>
+      <x>140</x>
+      <y>100</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -375,7 +387,7 @@
    <widget class="QLabel" name="label_17">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>140</x>
       <y>120</y>
       <width>47</width>
       <height>13</height>
@@ -394,13 +406,94 @@
      <string>111</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_18">
+    <property name="geometry">
+     <rect>
+      <x>61</x>
+      <y>150</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Gesamt:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_19">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>150</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>111</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_38">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>190</y>
+      <width>241</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Liste ganze Klasse/Stufe</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_28">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>70</y>
+      <width>161</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="text">
+     <string>Fehlstunden aktuelle*r Schüler*in</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>330</x>
      <y>220</y>
-     <width>267</width>
+     <width>275</width>
      <height>318</height>
     </rect>
    </property>
@@ -411,6 +504,9 @@
     </size>
    </property>
    <layout class="QGridLayout" name="gridLayout">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
     <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="font">
@@ -535,7 +631,7 @@
        <string notr="true">background-color: rgb(89, 209, 117);</string>
       </property>
       <property name="text">
-       <string>U</string>
+       <string>E</string>
       </property>
      </widget>
     </item>
@@ -620,7 +716,7 @@
        <string notr="true">background-color: rgb(216, 109, 109);</string>
       </property>
       <property name="text">
-       <string>E</string>
+       <string>U</string>
       </property>
      </widget>
     </item>
@@ -714,8 +810,11 @@
         <height>40</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 127);</string>
+      </property>
       <property name="text">
-       <string/>
+       <string>S</string>
       </property>
      </widget>
     </item>
@@ -727,8 +826,11 @@
         <height>40</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(160, 209, 255);</string>
+      </property>
       <property name="text">
-       <string/>
+       <string>Q</string>
       </property>
      </widget>
     </item>
@@ -992,6 +1094,330 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_2">
+   <property name="geometry">
+    <rect>
+     <x>650</x>
+     <y>328</y>
+     <width>281</width>
+     <height>231</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>2. Halbjahr</string>
+   </property>
+   <widget class="QDateEdit" name="dateEdit_3">
+    <property name="geometry">
+     <rect>
+      <x>183</x>
+      <y>32</y>
+      <width>81</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_20">
+    <property name="geometry">
+     <rect>
+      <x>144</x>
+      <y>37</y>
+      <width>35</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>bis zum</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_21">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>37</y>
+      <width>20</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>vom</string>
+    </property>
+   </widget>
+   <widget class="QDateEdit" name="dateEdit_4">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>32</y>
+      <width>81</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_22">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>100</y>
+      <width>80</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>entschuldigte:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_23">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>120</y>
+      <width>80</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>unentschuldigte:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="Line" name="line_6">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>130</y>
+      <width>241</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_7">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>90</y>
+      <width>20</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_24">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>100</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(89, 209, 117);</string>
+    </property>
+    <property name="text">
+     <string>111</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_25">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>120</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(216, 109, 109);</string>
+    </property>
+    <property name="text">
+     <string>111</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_26">
+    <property name="geometry">
+     <rect>
+      <x>61</x>
+      <y>150</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Gesamt:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_27">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>150</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>111</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_39">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>190</y>
+      <width>241</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Liste ganze Klasse/Stufe</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_29">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>70</y>
+      <width>161</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="text">
+     <string>Fehlstunden aktuelle*r Schüler*in</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QLabel" name="label_30">
+   <property name="geometry">
+    <rect>
+     <x>335</x>
+     <y>100</y>
+     <width>34</width>
+     <height>13</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Monat:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_31">
+   <property name="geometry">
+    <rect>
+     <x>510</x>
+     <y>100</y>
+     <width>25</width>
+     <height>13</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Jahr:</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBox_2">
+   <property name="geometry">
+    <rect>
+     <x>375</x>
+     <y>95</y>
+     <width>81</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>September</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Januar</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QLabel" name="label_32">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>154</y>
+     <width>201</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>9</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Woche vom 24.12. bis 24.12.</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QDateEdit" name="dateEdit_5">
+   <property name="geometry">
+    <rect>
+     <x>540</x>
+     <y>95</y>
+     <width>51</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="displayFormat">
+    <string>yyyy</string>
+   </property>
   </widget>
  </widget>
  <resources/>
