Dialog keine Größenänderung

--- a/NeueStunde.ui
+++ b/NeueStunde.ui
@@ -13,6 +13,18 @@
     <height>496</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>371</width>
+    <height>496</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>371</width>
+    <height>496</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Neue Stunde</string>
   </property>
