--- a/Syncdialog.ui
+++ b/Syncdialog.ui
@@ -60,14 +60,14 @@
    <item row="4" column="1">
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="pushButtonUebernehmen">
        <property name="text">
         <string>Übernehmen</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="pushButtonAbbrechen">
        <property name="text">
         <string>Abbrechen</string>
        </property>
