--- a/NeueStunde2.ui
+++ b/NeueStunde2.ui
@@ -238,6 +238,12 @@
       <height>16</height>
      </rect>
     </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
     <property name="text">
      <string>. Woche wiederholen bis zum</string>
     </property>
