--- a/NeueStunde2.ui
+++ b/NeueStunde2.ui
@@ -247,6 +247,7 @@
     <property name="font">
      <font>
       <family>Segoe UI</family>
+      <pointsize>8</pointsize>
      </font>
     </property>
     <property name="text">
