--- a/NeueStunde.ui
+++ b/NeueStunde.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>382</width>
-    <height>433</height>
+    <width>407</width>
+    <height>523</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -68,7 +68,13 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
       <item row="0" column="0">
-       <widget class="QCalendarWidget" name="calendarWidget"/>
+       <widget class="QCalendarWidget" name="calendarWidget">
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+         </font>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -213,6 +219,16 @@
             <property name="placeholderText">
              <string>keine Wiederholung</string>
             </property>
+            <item>
+             <property name="text">
+              <string>24.12.2021</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>keine Wdh.</string>
+             </property>
+            </item>
            </widget>
           </item>
          </layout>
