--- a/KursAnlegen.ui
+++ b/KursAnlegen.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>277</width>
+    <width>292</width>
     <height>176</height>
    </rect>
   </property>
@@ -23,6 +23,12 @@
   <layout class="QGridLayout" name="gridLayout_4">
    <item row="0" column="0">
     <widget class="QLabel" name="label">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>31</height>
+      </size>
+     </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
@@ -40,7 +46,7 @@
       <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
-      <string>Neuen Kurs anlegen2</string>
+      <string>Neuen Kurs anlegen</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
