--- a/NeueStunde.ui
+++ b/NeueStunde.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>407</width>
-    <height>523</height>
+    <height>447</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -58,23 +58,18 @@
    </item>
    <item row="1" column="0" colspan="2">
     <widget class="QGroupBox" name="groupBox">
-     <property name="font">
-      <font>
-       <pointsize>8</pointsize>
-      </font>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
      <property name="title">
       <string>Datum</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
       <item row="0" column="0">
-       <widget class="QCalendarWidget" name="calendarWidget">
-        <property name="font">
-         <font>
-          <pointsize>8</pointsize>
-         </font>
-        </property>
-       </widget>
+       <widget class="QCalendarWidget" name="calendarWidget"/>
       </item>
      </layout>
     </widget>
