--- a/Syncdialog.ui
+++ b/Syncdialog.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Synchronisation</string>
   </property>
   <property name="windowIcon">
    <iconset>
