--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -532,6 +532,12 @@ selection-color: rgb(255, 255, 255);</string>
     </item>
     <item row="0" column="0">
      <widget class="QComboBox" name="comboBoxKurs">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Ignored" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="styleSheet">
        <string notr="true">selection-background-color: rgb(85, 170, 255);</string>
       </property>
@@ -548,7 +554,7 @@ selection-color: rgb(255, 255, 255);</string>
      <x>0</x>
      <y>0</y>
      <width>1034</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuDatei">
